fix: logo spacing in footer

--- a/scss/_sjc-logo.scss
+++ b/scss/_sjc-logo.scss
@@ -22,6 +22,6 @@ footer {
 
   .sjc-title {
     position: absolute;
-    top: 75px;
+    top: 52px;
   }
 }
